--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         width: 200px;
         height: 200px;
 
-        color: burlywood;
+        color: yellow;
         justify-content: center;
         align-items: center;
         /* transition-property: background-color;
